--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 
       <div class="profile-card">
         <div class="avatar">
-          <img src="https://i.ibb.co/QF688WJR/BKZ2-EHYA-400x400.png" alt="avatar" />
+          <img src="https://i.ibb.co/TMFtn7XT/image.png" alt="avatar" />
         </div>
         <div class="profile-info">
           <div class="profile-header">
-            <p class="name">x5fkyou</p>
-            <div class="tag">Crypto</div>
+            <p class="name">x5likeyou</p>
+            <div class="tag">CEO</div>
           </div>
           <div class="social-grid">
             <a href="https://x.com/nacl_x1ao5" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
