--- a/index.html
+++ b/index.html
@@ -229,10 +229,27 @@
         <div class="profile-info">
           <div class="profile-header">
             <p class="name">HSIEH</p>
-            <div class="tag">全能型選手</div>
+            <div class="tag">牛逼</div>
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
+            <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="profile-card">
+        <div class="avatar">
+          <img src="https://i.ibb.co/DncjDsr/Callin.jpg" alt="avatar" />
+        </div>
+        <div class="profile-info">
+          <div class="profile-header">
+            <p class="name">Callin</p>
+            <div class="tag">冒險島第一把交椅</div>
+          </div>
+          <div class="social-grid">
+            <a href="https://x.com/Callin_NFT" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
             <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
@@ -246,7 +263,7 @@
         <div class="profile-info">
           <div class="profile-header">
             <p class="name">幕後推手</p>
-            <div class="tag">藏鏡人</div>
+            <div class="tag">美女1</div>
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
@@ -263,7 +280,7 @@
         <div class="profile-info">
           <div class="profile-header">
             <p class="name">幕後推手2</p>
-            <div class="tag">美女</div>
+            <div class="tag">美女2</div>
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
@@ -280,7 +297,7 @@
         <div class="profile-info">
           <div class="profile-header">
             <p class="name">幕後推手3</p>
-            <div class="tag">美女</div>
+            <div class="tag">美女3</div>
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
@@ -478,3 +495,4 @@
 
 </body>
 </html>
+
