--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="profile-info">
           <div class="profile-header">
             <p class="name">kiseiju</p>
-            <div class="tag">Crypto</div>
+            <div class="tag">阿公</div>
           </div>
           <div class="social-grid">
             <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
@@ -71,7 +71,7 @@
 
       <div class="profile-card">
         <div class="avatar">
-          <img src="https://i.ibb.co/TMFtn7XT/image.png" alt="avatar" />
+          <img src="https://i.ibb.co/r24NDzH7/image.png" alt="avatar" />
         </div>
         <div class="profile-info">
           <div class="profile-header">
@@ -105,12 +105,12 @@
 
       <div class="profile-card">
         <div class="avatar">
-          <img src="https://i.ibb.co/zhVn3ySP/Donk.jpg" alt="avatar" />
+          <img src="https://i.ibb.co/TMFtn7XT/image.png" alt="avatar" />
         </div>
         <div class="profile-info">
           <div class="profile-header">
-            <p class="name">我还在学习</p>
-            <div class="tag">大黑急拔</div>
+            <p class="name">我還在學習</p>
+            <div class="tag">修仙中</div>
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
@@ -495,4 +495,5 @@
 
 </body>
 </html>
+
 
