--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
       <div class="profile-card">
         <div class="avatar">
-          <img src="https://i.ibb.co/1JqM7m6r/image.png" alt="avatar" />
+          <img src="https://i.ibb.co/tTm4Dtmf/Cuuuu.png" alt="avatar" />
         </div>
         <div class="profile-info">
           <div class="profile-header">
@@ -275,7 +275,7 @@
 
       <div class="profile-card">
         <div class="avatar">
-          <img src="https://i.ibb.co/F4s8g1y5/image.png" alt="avatar" />
+          <img src="https://i.ibb.co/rRFNjbwr/Girl.jpg" alt="avatar" />
         </div>
         <div class="profile-info">
           <div class="profile-header">
@@ -495,6 +495,7 @@
 
 </body>
 </html>
+
 
 
 
