--- a/index.html
+++ b/index.html
@@ -493,8 +493,406 @@
     © 2025 X5 Capital. All rights reserved.
   </footer>
 
+  <!-- ===== Gift Button & Modals & Wheel臨時抽獎插件===== -->
+<div id="giftBtn" class="gift-btn" title="點我領禮物"></div>
+<div id="giftHint" class="gift-hint">按住 <b>Shift</b> 拖曳可調位置</div>
+
+<!-- 密碼輸入 Modal -->
+<div id="pwdMask" class="modal-mask" role="dialog" aria-modal="true">
+  <div class="modal">
+    <h3>輸入禮物密碼</h3>
+    <p>每組密碼僅能使用一次（刷新也不能重複操機掰）。</p>
+    <div class="row">
+      <input id="pwdInput" type="password" placeholder="輸入密碼" />
+      <button id="pwdSubmit">解鎖</button>
+    </div>
+    <div class="row" style="margin-top:8px; justify-content:flex-end;">
+      <button id="pwdCancel">取消</button>
+    </div>
+    <p id="pwdMsg" style="color:#ff8080; min-height:18px;"></p>
+  </div>
+</div>
+
+<!-- 抽獎輪盤區 -->
+<section id="wheelWrap" class="wheel-wrap">
+  <div style="position:relative">
+    <canvas id="wheelCanvas" class="wheel-canvas"></canvas>
+    <div class="wheel-pointer"></div>
+  </div>
+  <button id="spinBtn" class="spin-btn">開始抽獎</button>
+</section>
+
+<!-- 中獎彈窗 Modal -->
+<div id="winMask" class="modal-mask" role="dialog" aria-modal="true">
+  <div class="modal win-popup">
+    <h3 id="winTitle">恭喜中獎！</h3>
+    <img id="winImg" src="" alt="prize"/>
+    <p id="winDesc"></p>
+    <div class="row" style="justify-content:center;margin-top:10px;">
+      <button id="winOk">爽啦</button>
+    </div>
+  </div>
+</div>
+
+<!-- 抽獎輪盤 Modal（新增） -->
+<div id="wheelMask" class="modal-mask wheel-modal" role="dialog" aria-modal="true">
+  <div class="modal">
+    <div id="wheelModalBody"></div>
+    <div class="row" style="justify-content:center;margin-top:10px;">
+      <button id="wheelClose">關閉</button>
+    </div>
+  </div>
+</div>
+
+
+<script>
+/* ===================== 基本設定（你可以改） ===================== */
+/** 一次性密碼清單（字串陣列）。部署時你可改由後端 API 檢查。 */
+const VALID_CODES = [
+  "q1", "q2", "q3", "q4", "q5", "q6", "q7", "q8", "q9", "q10"  // ← 自行新增/修改
+];
+
+/** 抽獎獎項設定：label=名稱, weight=機率權重, img=中獎彈窗圖片, desc=描述 */
+let PRIZES = [
+  { label: "BTC",   weight: 0,  img: "", desc: "" },
+  { label: "ETH",   weight: 0,  img: "", desc: "" },
+  { label: "SOL",   weight: 0,  img: "", desc: "" },
+  { label: "BNB",   weight: 0,  img: "", desc: "" },
+  { label: "ADA",   weight: 5, img: "https://i.ibb.co/dsxdwW5j/image.jpg",  desc: "生日快樂" }
+];
+// 小提示：總機率=權重總和，不需要 100；你只要調整 weight 比例即可。
+
+/* ===================== 一次性密碼（本地持久化） ===================== */
+/** 用 localStorage 記錄已使用密碼；刷新後仍不可再用 */
+const USED_KEY = "gift_used_codes_v1";
+function getUsedSet(){
+  try{ return new Set(JSON.parse(localStorage.getItem(USED_KEY) || "[]")); }
+  catch{ return new Set(); }
+}
+function saveUsedSet(set){
+  localStorage.setItem(USED_KEY, JSON.stringify(Array.from(set)));
+}
+
+/* ===================== Gift 按鈕 & 可拖曳位置 ===================== */
+const giftBtn = document.getElementById("giftBtn");
+const giftHint = document.getElementById("giftHint");
+
+// 位置儲存
+const POS_KEY = "gift_pos_v1";
+(function restorePos(){
+  try{
+    const pos = JSON.parse(localStorage.getItem(POS_KEY) || "{}");
+    if(pos.top && pos.left){
+      document.documentElement.style.setProperty('--gift-top', pos.top);
+      document.documentElement.style.setProperty('--gift-left', pos.left);
+    }
+  }catch{}
+})();
+
+// Shift + 拖曳移動並存檔
+let dragging = false, offset = {x:0,y:0};
+giftBtn.addEventListener("mousedown", (e)=>{
+  if(!e.shiftKey) return;
+  dragging = true;
+  giftBtn.classList.add("editing");
+  const rect = giftBtn.getBoundingClientRect();
+  offset.x = e.clientX - rect.left;
+  offset.y = e.clientY - rect.top;
+});
+window.addEventListener("mousemove", (e)=>{
+  if(!dragging) return;
+  const x = e.clientX - offset.x;
+  const y = e.clientY - offset.y;
+  // 限制在視窗內
+  const maxX = window.innerWidth - 64;
+  const maxY = window.innerHeight - 64;
+  const left = Math.max(0, Math.min(x, maxX));
+  const top = Math.max(0, Math.min(y, maxY));
+  const topPx = top + "px";
+  const leftPx = left + "px";
+  document.documentElement.style.setProperty('--gift-top', topPx);
+  document.documentElement.style.setProperty('--gift-left', leftPx);
+});
+window.addEventListener("mouseup", ()=>{
+  if(!dragging) return;
+  dragging = false;
+  giftBtn.classList.remove("editing");
+  const top = getComputedStyle(document.documentElement).getPropertyValue('--gift-top').trim();
+  const left = getComputedStyle(document.documentElement).getPropertyValue('--gift-left').trim();
+  localStorage.setItem(POS_KEY, JSON.stringify({ top, left }));
+});
+
+giftBtn.addEventListener("click", (e)=>{
+  if(e.shiftKey) return; // 編輯時不開啟
+  openPwdModal();
+});
+
+/* ===================== 密碼 Modal ===================== */
+const pwdMask = document.getElementById("pwdMask");
+const pwdInput = document.getElementById("pwdInput");
+const pwdSubmit = document.getElementById("pwdSubmit");
+const pwdCancel = document.getElementById("pwdCancel");
+const pwdMsg = document.getElementById("pwdMsg");
+
+function openPwdModal(){
+  pwdMask.style.display = "flex";
+  pwdInput.value = "";
+  pwdMsg.textContent = "";
+  setTimeout(()=>pwdInput.focus(), 0);
+}
+function closePwdModal(){ pwdMask.style.display = "none"; }
+
+pwdCancel.addEventListener("click", closePwdModal);
+pwdMask.addEventListener("click", (e)=>{ if(e.target === pwdMask) closePwdModal(); });
+
+pwdSubmit.addEventListener("click", handlePwd);
+pwdInput.addEventListener("keydown", (e)=>{ if(e.key === "Enter") handlePwd(); });
+
+function handlePwd(){
+  const code = (pwdInput.value || "").trim();
+  if(!code){ pwdMsg.textContent = "請輸入密碼"; return; }
+
+  const used = getUsedSet();
+  if(used.has(code)){
+    pwdMsg.textContent = "這組密碼已經使用過了。";
+    return;
+  }
+  if(!VALID_CODES.includes(code)){
+    pwdMsg.textContent = "密碼錯誤或不存在。";
+    return;
+  }
+
+  used.add(code);
+  saveUsedSet(used);
+  closePwdModal();
+  revealWheel();
+}
+
+/* ===================== 輪盤繪製 & 抽獎邏輯 ===================== */
+const wheelWrap = document.getElementById("wheelWrap");
+const wheelCanvas = document.getElementById("wheelCanvas");
+let spinBtn = document.getElementById("spinBtn");
+const ctx = wheelCanvas.getContext("2d");
+
+let currentAngle = 0;
+let spinning = false;
+let drawLocked = false;
+let rafId = null; // 記錄目前的動畫 id
+
+const deg  = d => d * Math.PI / 180;
+const rand = (a, b) => a + Math.random() * (b - a);
+
+function revealWheel(){
+  // 1) 取出輪盤 Modal 容器
+  const wheelMask = document.getElementById('wheelMask');
+  const wheelBody = document.getElementById('wheelModalBody');
+
+  // 2) 把原本頁面裡的輪盤區搬進 Modal 內
+  wheelBody.innerHTML = '';
+  wheelBody.appendChild(wheelWrap);
+
+  // 3) 顯示輪盤並打開 Modal
+  wheelWrap.style.display = "block";
+  wheelMask.style.display = "flex";
+
+  // --- 每次解鎖前，先把上一輪的狀態清乾淨 ---
+  if (rafId) { cancelAnimationFrame(rafId); rafId = null; } // 停掉殘留動畫
+  spinning = false;          // 確保不是「半路以為還在轉」
+  drawLocked = false;        // 你已經有 reset，但再保險
+  spinBtn.disabled = false;
+  spinBtn.classList.remove('done');
+  spinBtn.textContent = '開始抽獎';
+
+  // 把角度歸零（或最少 mod 回 0~2π，避免角度越累越大）
+  const twoPI = Math.PI * 2;
+  currentAngle = ((currentAngle % twoPI) + twoPI) % twoPI; // 若你想直接歸零：currentAngle = 0;
+
+
+  // 🔁 重置一次性抽獎狀態（新的密碼＝新的機會）
+  drawLocked = false;
+  spinBtn.disabled = false;
+  spinBtn.classList.remove('done');
+  spinBtn.textContent = '開始抽獎';
+
+  // 4) 畫布調整
+  resizeCanvas();
+  drawWheel();
+}
+
+function resizeCanvas(){
+  const size = Math.min(520, Math.min(window.innerWidth*0.92, window.innerHeight*0.8));
+  wheelCanvas.width = size * devicePixelRatio;
+  wheelCanvas.height = size * devicePixelRatio;
+  wheelCanvas.style.width = size + "px";
+  wheelCanvas.style.height = size + "px";
+  ctx.setTransform(devicePixelRatio,0,0,devicePixelRatio,0,0);
+}
+window.addEventListener("resize", ()=>{ if(wheelWrap.style.display==="block"){ resizeCanvas(); drawWheel(); }});
+
+function drawWheel(){
+  const W = wheelCanvas.width / devicePixelRatio;
+  const H = wheelCanvas.height / devicePixelRatio;
+  const cx = W/2, cy = H/2;
+  const margin = 18;
+  const r = Math.min(W,H)/2 - margin;
+  const n = PRIZES.length;
+  const twoPI = Math.PI * 2;
+  const slice = twoPI / n;
+
+  ctx.clearRect(0,0,W,H);
+  ctx.save();
+  ctx.translate(cx, cy);
+  ctx.rotate(currentAngle);
+
+  for (let i = 0; i < n; i++){
+    const start = i * slice;
+    const end   = start + slice;
+
+    // 扇形
+    ctx.beginPath();
+    ctx.moveTo(0,0);
+    ctx.arc(0,0,r, start, end);
+    ctx.closePath();
+    ctx.fillStyle = i % 2 ? "#202020" : "#252525";
+    ctx.fill();
+    ctx.strokeStyle = "#333";
+    ctx.lineWidth = 2;
+    ctx.stroke();
+
+    // 文字（中心線）
+    const mid = start + slice/2;
+    ctx.save();
+    ctx.rotate(mid);
+    const labelRadius = r - 48;
+    ctx.textAlign = "center";
+    ctx.textBaseline = "middle";
+    ctx.fillStyle = "#ddd";
+    ctx.font = "16px Segoe UI, system-ui, -apple-system";
+    ctx.fillText(PRIZES[i].label, labelRadius, 0);
+    ctx.restore();
+  }
+
+  // 中心圓
+  ctx.beginPath();
+  ctx.arc(0,0, 46, 0, twoPI);
+  ctx.fillStyle="#111";
+  ctx.fill();
+  ctx.strokeStyle="#3a3a3a";
+  ctx.stroke();
+
+  ctx.restore();
+}
+
+function weightedPick(){
+  const items = PRIZES.map((p, i) => ({ i, p, w: Math.max(0, Number(p.weight) || 0) }));
+  const positives = items.filter(x => x.w > 0);
+  if (positives.length === 0) return { prize: items[0].p, index: 0 }; // 全是 0 就回第一個(可改)
+  if (positives.length === 1) return { prize: positives[0].p, index: positives[0].i };
+
+  const total = positives.reduce((s, x) => s + x.w, 0);
+  let r = Math.random() * total;
+  for (const x of positives) {
+    if (r < x.w) return { prize: x.p, index: x.i };
+    r -= x.w;
+  }
+  const last = positives[positives.length - 1];
+  return { prize: last.p, index: last.i };
+}
+
+spinBtn.addEventListener("click", ()=>{
+  if (spinning || drawLocked) return;
+  spinning = true;
+  spinBtn.disabled = true;
+
+  // 只會回傳權重>0 的獎；其他設 0 就不可能被抽到
+  let { prize: targetPrize, index: targetIndex } = weightedPick();
+  if (!targetPrize || !(Number(targetPrize.weight) > 0)) {
+    const fb = PRIZES.findIndex(p => Number(p.weight) > 0);
+    targetIndex = fb !== -1 ? fb : 0;
+    targetPrize = PRIZES[targetIndex];
+  }
+
+  const twoPI = Math.PI * 2;
+  const n     = PRIZES.length;
+  const slice = twoPI / n;
+
+  // 指針固定在 12 點方向
+  const pointerAngle = -Math.PI/2;
+
+  // ✅ 只鎖「中心線」
+  const targetMidAngle = targetIndex * slice + slice/2;
+
+  // 直接算最終位移（多轉 6~8 圈）
+  const start = currentAngle; // 不要做任何標準化
+  const extraTurns = 12 + Math.floor(Math.random()*3);
+  const finalDelta = (pointerAngle - (start + targetMidAngle)) + extraTurns*twoPI;
+
+  const duration = 4500;
+  const t0 = performance.now();
+  const easeOutCubic = t => 1 - Math.pow(1 - t, 3);
+
+  function anim(now){
+    const t = Math.min(1, (now - t0) / duration);
+    currentAngle = start + finalDelta * easeOutCubic(t);
+    drawWheel();
+    if (t < 1) return requestAnimationFrame(anim);
+
+    // 停止：只用事先算好的 finalDelta，不做任何二次校正或抖動
+    spinning = false;
+    currentAngle = start + finalDelta;
+    drawWheel();
+
+    showWin(targetPrize);
+    drawLocked = true;
+    spinBtn.disabled = true;
+    spinBtn.classList.add('done');
+    spinBtn.textContent = '抽獎已完成';
+  }
+  rafId = requestAnimationFrame(anim);
+});
+
+/* ===================== 中獎彈窗 ===================== */
+const winMask = document.getElementById("winMask");
+const winImg = document.getElementById("winImg");
+const winDesc = document.getElementById("winDesc");
+const winTitle = document.getElementById("winTitle");
+const winOk = document.getElementById("winOk");
+
+// 關閉中獎彈窗（保留輪盤）
+winOk.addEventListener("click", () => {
+  winMask.style.display = "none";
+});
+
+// 點彈窗的半透明遮罩，也可以關
+winMask.addEventListener("click", (e) => {
+  if (e.target === winMask) {
+    winMask.style.display = "none";
+  }
+});
+
+function showWin(prize){
+  winTitle.textContent = `恭喜抽中：${prize.label}`;
+  winImg.src = prize.img || "";
+  winDesc.textContent = prize.desc || "";
+  winMask.style.display = "flex";
+}
+
+// 關閉輪盤 Modal
+document.getElementById('wheelClose').addEventListener('click', ()=>{
+  document.getElementById('wheelMask').style.display = 'none';
+});
+
+// 點遮罩也可關閉
+document.getElementById('wheelMask').addEventListener('click', (e)=>{
+  if(e.target.id === 'wheelMask') e.target.style.display = 'none';
+});
+
+</script>
+  <!-- ===== 臨時抽獎插件結尾===== -->
+
 </body>
 </html>
+
 
 
 
