--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
     <img id="winImg" src="" alt="prize"/>
     <p id="winDesc"></p>
     <div class="row" style="justify-content:center;margin-top:10px;">
-      <button id="winOk">爽啦</button>
+      <button id="winOk">關閉</button>
     </div>
   </div>
 </div>
@@ -549,7 +549,7 @@
 /* ===================== 基本設定（你可以改） ===================== */
 /** 一次性密碼清單（字串陣列）。部署時你可改由後端 API 檢查。 */
 const VALID_CODES = [
-  "q1", "q2", "q3", "q4", "q5", "q6", "q7", "q8", "q9", "q10"  // ← 自行新增/修改
+  "920827", "test1", "test2", "test3"  // ← 自行新增/修改
 ];
 
 /** 抽獎獎項設定：label=名稱, weight=機率權重, img=中獎彈窗圖片, desc=描述 */
@@ -892,6 +892,7 @@ document.getElementById('wheelMask').addEventListener('click', (e)=>{
 
 </body>
 </html>
+
 
 
 
