--- a/alpha/index.html
+++ b/alpha/index.html
@@ -76,12 +76,12 @@
       <div class="navbar-right">
         <a href="/#!">Home</a>
         <a href="/product/">Product</a>
+        <a href="/airdrop">Airdrop</a>
         <a href="/trade">Trade</a>
         <a href="/alpha">BinanceAlpha</a>
         <a href="#">Resources</a>
         <a href="#">Docs</a>
         <a href="#">Blog</a>
-        <a href="#">你他媽</a>
         <button class="login-btn">Login</button>
       </div>
     </nav>
@@ -188,7 +188,7 @@ const runTradeLoop = async () => {
       console.error(`[錯誤] 第 ${i} 筆交易失敗：${e.message}`);
     }
   }
-  console.log('\n董事長您吩咐的事情已經完成了!');
+  console.log('\n完成');
 };
 
 runTradeLoop();</code></pre>
@@ -256,3 +256,4 @@ runTradeLoop();</code></pre>
   </script>
 </body>
 </html>
+
