--- a/product/index.html
+++ b/product/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="navbar-right">
         <a href="/">Home</a>
-        <a href="/product">Product</a>
+        <a href="/product" class="active">Product</a>
         <a href="/airdrop">Airdrop</a>
         <a href="/trade">Trade</a>
         <a href="/alpha">BinanceAlpha</a>
@@ -54,3 +54,4 @@
   </div>
 </body>
 </html>
+
