--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <div class="navbar-right">
       <a href="/#">Home</a>
       <a href="/product">Product</a>
-      <a href="/airdrop">Airdrop</a>
+      <a href="/market">Market</a>
       <a href="/trade">Trade</a>
+      <a href="/airdrop">Airdrop</a>
       <a href="/alpha">BinanceAlpha</a>
       <a href="#">Resources</a>
       <a href="#">Docs</a>
@@ -892,6 +893,7 @@ document.getElementById('wheelMask').addEventListener('click', (e)=>{
 
 </body>
 </html>
+
 
 
 
