--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <img src="x5logo.png" width="55" height="55" alt="fleek logo">
     </div>
     <div class="navbar-right">
-      <a href="/#">Home</a>
+      <a href="/" class="active">Home</a>
       <a href="/product">Product</a>
       <a href="/market">Market</a>
       <a href="/trade">Trade</a>
@@ -893,6 +893,7 @@ document.getElementById('wheelMask').addEventListener('click', (e)=>{
 
 </body>
 </html>
+
 
 
 
