--- a/market/index.html
+++ b/market/index.html
@@ -41,7 +41,7 @@
 
     <!-- Hero + Toolbar -->
     <header class="market-hero">
-      <h1 class="market-title">X5 Market — 買你喜歡的nigger，用加密結帳</h1>
+      <h1 class="market-title">X5 Market — 買你喜歡的商品，用加密結帳</h1>
       <p class="market-sub">支援 USDT / ETH（展示版，已整合真實 Webhook）。</p>
 
       <div class="toolbar">
@@ -183,3 +183,4 @@
 </body>
 
 </html>
+
