--- a/market/admin.html
+++ b/market/admin.html
@@ -78,6 +78,7 @@
           <h3 id="formTitle">新增 / 編輯商品</h3>
           <div class="grid" style="grid-template-columns: 1fr;">
             <input id="f_id" placeholder="id（唯一，例：alpha-pass-1m）">
+            <input id="f_sku"  placeholder="sku（可留空＝同 id）">
             <input id="f_title" placeholder="title">
             <textarea id="f_desc" placeholder="description" rows="3"></textarea>
             <input id="f_category" placeholder="category（例：membership/design）">
