--- a/market/admin.html
+++ b/market/admin.html
@@ -111,6 +111,7 @@
           </select>
           <input id="o_q" placeholder="搜尋 id" size="24">
           <button id="reloadOrders">重新載入</button>
+          <span id="ordersMsg" class="muted"></span>
         </div>
         <div class="row">
           <span id="ordersCount" class="chip">0 筆</span>
