--- a/alpha/index.html
+++ b/alpha/index.html
@@ -74,7 +74,7 @@
         <img src="../x5logo.png" width="55" height="55" alt="x5 logo">
       </div>
       <div class="navbar-right">
-        <a href="/#!">Home</a>
+        <a href="/">Home</a>
         <a href="/product/">Product</a>
         <a href="/airdrop">Airdrop</a>
         <a href="/trade">Trade</a>
@@ -256,4 +256,5 @@ runTradeLoop();</code></pre>
   </script>
 </body>
 </html>
+
 
