--- a/product/index.html
+++ b/product/index.html
@@ -20,6 +20,7 @@
       <div class="navbar-right">
         <a href="/">Home</a>
         <a href="/product" class="active">Product</a>
+        <a href="/market">Market</a>
         <a href="/airdrop">Airdrop</a>
         <a href="/trade">Trade</a>
         <a href="/alpha">BinanceAlpha</a>
@@ -54,4 +55,5 @@
   </div>
 </body>
 </html>
+
 
