--- a/market/admin.html
+++ b/market/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>X5 Admin</title>
+  <title>x5market控制台</title>
   <meta name="robots" content="noindex,nofollow" />
   <style>
     :root { color-scheme: dark; --bg:#0b0b0b; --card:#121212; --line:#1f1f1f; --muted:#9aa0a6; --acc:#5eead4; }
@@ -36,7 +36,7 @@
 <body>
   <header>
     <div class="wrap row">
-      <strong>🛠 X5 Admin</strong>
+      <strong>x5market控制台</strong>
       <input id="base" placeholder="https://x5capital.onrender.com" size="36">
       <input id="token" placeholder="ADMIN_TOKEN" size="30">
       <button id="save" class="primary">保存</button>
