--- a/index.html
+++ b/index.html
@@ -404,13 +404,13 @@
     <div class="faq-item">
         <input type="checkbox" id="faq4">
         <label for="faq4" class="faq-question">如何加入?</label>
-        <div class="faq-answer">不歡迎坦克系女孩。</div>
+        <div class="faq-answer">董事會還在制定規則。</div>
       </div>
 
     <div class="faq-item">
         <input type="checkbox" id="faq5">
         <label for="faq5" class="faq-question">bot?</label>
-        <div class="faq-answer">Bot幫我買了8000sol。</div>
+        <div class="faq-answer">Bot幫我買了8000sol。我買你機掰啦幹您娘</div>
       </div>  
 
     <div class="faq-item">
@@ -476,13 +476,13 @@
     <div class="faq-item">
         <input type="checkbox" id="faq16">
         <label for="faq16" class="faq-question">300u?</label>
-        <div class="faq-answer">坦克邀了幾個bot因此獲得了300u。你說這個機會如果給到燮戈呢?</div>
+        <div class="faq-answer">坦克邀了幾個bot因此獲得了300u。你說這個機會如果給到lotion呢?</div>
       </div>
 
     <div class="faq-item">
         <input type="checkbox" id="faq17">
         <label for="faq17" class="faq-question">MaplestoryN?</label>
-        <div class="faq-answer">很難想像一個群主(冰雷被鎖)能叫大家別玩MSU去玩POE，像這樣阻止群友發財的群主哪裡找?</div>
+        <div class="faq-answer">很難想像一個群主(冰雷被鎖)在冒險島最輝煌的時刻叫大家別玩MSU去玩POE2(雖然poe2很好玩)，像這樣阻止群友發財的群主哪裡找?我請問呢</div>
       </div>
   </section> 
 
@@ -893,6 +893,7 @@ document.getElementById('wheelMask').addEventListener('click', (e)=>{
 
 </body>
 </html>
+
 
 
 
