--- a/market/admin.html
+++ b/market/admin.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>x5market控制台</title>
+  <link rel="icon" href="https://i.ibb.co/BHW14yr0/Newx5logo.png" />
   <meta name="robots" content="noindex,nofollow" />
   <style>
     :root { color-scheme: dark; --bg:#0b0b0b; --card:#121212; --line:#1f1f1f; --muted:#9aa0a6; --acc:#5eead4; }
