--- a/market/index.html
+++ b/market/index.html
@@ -42,7 +42,7 @@
     <!-- Hero + Toolbar -->
     <header class="market-hero">
       <h1 class="market-title">X5 Market — 買你喜歡的Nigger，用加密結帳</h1>
-      <p class="market-sub">支援 USDT / ETH（展示版，已整合真實 Webhook）。</p>
+      <p class="market-sub">支援 USDT / ETH（目前僅支持Arbitrum）。</p>
 
       <div class="toolbar">
         <input class="tool-input" id="searchInput" placeholder="搜尋：NFT、Logo、週邊…" />
@@ -183,5 +183,6 @@
 </body>
 
 </html>
+
 
 
