--- a/market/index.html
+++ b/market/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>x5capital</title>
   <link rel="icon" href="https://i.ibb.co/q3DYk2jr/Newx5logo.png" />
+  <link rel="preconnect" href="https://x5capital.onrender.com" crossorigin>
   <!-- 全站樣式 -->
   <link rel="stylesheet" href="../styles.css" />
   <!-- /market 專屬樣式 -->
@@ -183,6 +184,7 @@
 </body>
 
 </html>
+
 
 
 
