--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>x5capital</title>
+  <title>X5Capital</title>
   <link rel="icon" href="https://i.ibb.co/q3DYk2jr/Newx5logo.png" />
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -19,7 +19,7 @@
   <!-- Navbar -->
   <nav class="navbar">
     <div class="navbar-left">
-      <img src="x5logo.png" width="55" height="55" alt="fleek logo">
+      <img src="x5logo.png" width="55" height="55" alt="x5 logo">
     </div>
     <div class="navbar-right">
       <a href="/" class="active">Home</a>
@@ -28,9 +28,9 @@
       <a href="/trade">Trade</a>
       <a href="/airdrop">Airdrop</a>
       <a href="/alpha">BinanceAlpha</a>
-      <a href="#">Resources</a>
-      <a href="#">Docs</a>
-      <a href="#">Blog</a>
+      <a href="">Resources</a>
+      <a href="">Docs</a>
+      <a href="">Blog</a>
       <button class="login-btn">Login</button>
     </div>
   </nav>
@@ -64,8 +64,8 @@
           </div>
           <div class="social-grid">
             <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
-            <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="https://x.com/kiseiju1119" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
+            <a href="" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
+            <a href="" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -80,9 +80,9 @@
             <div class="tag">CEO</div>
           </div>
           <div class="social-grid">
-            <a href="https://x.com/nacl_x1ao5" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
+            <a href="https://x.com/x5likeyou" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
+            <a href="" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
+            <a href="" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -97,9 +97,9 @@
             <div class="tag">操逼天尊</div>
           </div>
           <div class="social-grid">
-            <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
+            <a href="" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
+            <a href="" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
+            <a href="" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -114,9 +114,9 @@
             <div class="tag">修仙中</div>
           </div>
           <div class="social-grid">
-            <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
-            <a href="#" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
+            <a href="pornhub.com" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
+            <a href="pornhub.com" class="social-button"><img src="https://i.ibb.co/Ngj3Sjmv/X5ins.png" alt="Instagram Logo" /></a>
+            <a href="pornhub.com" class="social-button"><img src="https://i.ibb.co/1tjQrCV1/Tiktok-x5.png" alt="TikTok Logo" /></a>
           </div>
         </div>
       </div>
@@ -128,7 +128,7 @@
         <div class="profile-info">
           <div class="profile-header">
             <p class="name">meji</p>
-            <div class="tag">掃鏈超新星</div>
+            <div class="tag">PolyMarket</div>
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
@@ -145,7 +145,7 @@
         <div class="profile-info">
           <div class="profile-header">
             <p class="name">Alu</p>
-            <div class="tag">掃鏈超新星</div>
+            <div class="tag">KOL</div>
           </div>
           <div class="social-grid">
             <a href="https://x.com/alu69420" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
@@ -179,7 +179,7 @@
         <div class="profile-info">
           <div class="profile-header">
             <p class="name">Wingo</p>
-            <div class="tag">Crypto</div>
+            <div class="tag">Crypto/fps</div>
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
@@ -196,7 +196,7 @@
         <div class="profile-info">
           <div class="profile-header">
             <p class="name">WHISKER</p>
-            <div class="tag">先信资本风投小组</div>
+            <div class="tag">先信资本/fps</div>
           </div>
           <div class="social-grid">
             <a href="https://x.com/whisker2828" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
@@ -978,6 +978,7 @@ document.getElementById('wheelMask').addEventListener('click', (e)=>{
 
 </body>
 </html>
+
 
 
 
