--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <div class="profile-info">
           <div class="profile-header">
             <p class="name">HSIEH</p>
-            <div class="tag">牛逼</div>
+            <div class="tag">工讀生</div>
           </div>
           <div class="social-grid">
             <a href="#" class="social-button"><img src="https://t1.pixhost.to/thumbs/7520/626314480_x5x-1.png" alt="X Logo" /></a>
@@ -978,6 +978,7 @@ document.getElementById('wheelMask').addEventListener('click', (e)=>{
 
 </body>
 </html>
+
 
 
 
