--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>X5Capital</title>
+  <title>x5capital</title>
   <link rel="icon" href="https://i.ibb.co/q3DYk2jr/Newx5logo.png" />
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -978,6 +978,7 @@ document.getElementById('wheelMask').addEventListener('click', (e)=>{
 
 </body>
 </html>
+
 
 
 
