--- a/airdrop/index.html
+++ b/airdrop/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Airdrop 任務廣場（測試）</title>
+  <title>Airdrop</title>
   <!-- React 18 UMD + Babel（僅用於本地測試，不建議正式上線） -->
   <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
@@ -35,4 +35,5 @@
     root.render(<AirdropHub />);
   </script>
 </body>
+
 </html>
