--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>x5capital</title>
-  <link rel="icon" href="https://i.ibb.co/q3DYk2jr/Newx5logo.png" />
+  <link rel="icon" href="/x5logo.png" type="image/png">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
