--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>x5capital</title>
-  <link rel="icon" href="/x5logo.png" type="image/png">
+  <link rel="icon" href="/newx5logo.png" type="image/png">
   <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="/newx5logo.ico">
+  <link rel="apple-touch-icon" href="/newx5logo.png">
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "url": "https://www.x5capital.xyz/",
+  "name": "x5capital",
+  "alternateName": "X5"
+}
+</script>
 </head>
 <body>
 
@@ -978,3 +989,4 @@ document.getElementById('wheelMask').addEventListener('click', (e)=>{
 
 </body>
 </html>
+
