--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>x5capital</title>
+  <link rel="icon" href="/favicon.ico">
   <link rel="icon" href="/newx5logo.png" type="image/png">
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="/newx5logo.ico">
-  <link rel="apple-touch-icon" href="/newx5logo.png">
+  <link rel="icon" type="image/png" href="/favicon-48.png" sizes="48x48">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+  <meta name="theme-color" content="#0f1115">
   <script type="application/ld+json">
   {
   "@context": "https://schema.org",
@@ -989,5 +992,6 @@ document.getElementById('wheelMask').addEventListener('click', (e)=>{
 
 </body>
 </html>
+
 
 
