--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="icon" href="/newx5logo.png" type="image/png">
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="/newx5logo.ico">
-  <link rel="icon" type="image/png" href="/newx5logo-48x48.png" sizes="48x48">
-  <link rel="apple-touch-icon" href="/newx5logo-180x180.png" sizes="180x180">
+  <link rel="icon" type="image/png" href="/favicon-48.png" sizes="48x48">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
   <meta name="theme-color" content="#0f1115">
   <script type="application/ld+json">
   {
@@ -992,6 +992,7 @@ document.getElementById('wheelMask').addEventListener('click', (e)=>{
 
 </body>
 </html>
+
 
 
 
