--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   "alternateName": "X5"
   }
 </script>
+<meta name="google-site-verification" content="vN-BdezcxjNl-JNL38Sg9lKN4B5L_QOzErbRba_7yBo" />  
 </head>
 <body>
 
@@ -992,6 +993,7 @@ document.getElementById('wheelMask').addEventListener('click', (e)=>{
 
 </body>
 </html>
+
 
 
 
