--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <a href="/airdrop">Airdrop</a>
       <a href="/alpha">BinanceAlpha</a>
       <a href="">Resources</a>
-      <a href="docs.x5capital.xyz">Docs</a>
+      <a href="https://docs.x5capital.xyz">Docs</a>
       <a href="">Blog</a>
       <button class="login-btn">Login</button>
     </div>
@@ -908,6 +908,7 @@ document.getElementById('wheelMask').addEventListener('click', (e)=>{
 
 </body>
 </html>
+
 
 
 
