--- a/product/index.html
+++ b/product/index.html
@@ -4,8 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>x5capital</title>
-  <link rel="icon" href="../x5logo.png" />
-  <link rel="stylesheet" href="../styles.css" />
+  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/newx5logo.png" type="image/png">
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="/newx5logo.ico">
+  <link rel="icon" type="image/png" href="/favicon-48.png" sizes="48x48">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+  <meta name="theme-color" content="#0f1115">
+  <script type="application/ld+json">
+  {
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "url": "https://www.x5capital.xyz/",
+  "name": "x5capital",
+  "alternateName": "X5"
+  }
+</script>
+<meta name="google-site-verification" content="vN-BdezcxjNl-JNL38Sg9lKN4B5L_QOzErbRba_7yBo" />  
 </head>
 <body>
   <div class="wrapper">
@@ -57,6 +72,7 @@
 
 </body>
 </html>
+
 
 
 
