--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 <div id="pwdMask" class="modal-mask" role="dialog" aria-modal="true">
   <div class="modal">
     <h3>輸入禮物密碼</h3>
-    <p>每組密碼僅能使用一次（刷新也不能重複操機掰）。</p>
+    <p>每組密碼僅能使用一次（刷新也不能重複）。</p>
     <div class="row">
       <input id="pwdInput" type="password" placeholder="輸入密碼" />
       <button id="pwdSubmit">解鎖</button>
@@ -908,6 +908,7 @@ document.getElementById('wheelMask').addEventListener('click', (e)=>{
 
 </body>
 </html>
+
 
 
 
